# show-changed-tests

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: end_to_end.rs  extract_issue_numbers.rs  format_message.rs
tests/common/: mod.rs
